--- a/kephale.001/debian/Dockerfile
+++ b/kephale.001/debian/Dockerfile
@@ -1,12 +1,6 @@
-FROM silex/nix
+FROM silex/emacs:27.2-dev
 
-ADD https://git.sv.gnu.org/git/emacs.git/refs/heads/master /tmp/cache
-
-ADD https://api.github.com/repos/Silex/nix-emacs-ci/commits?per_page=1 /tmp/cache
-RUN nix-env -iA emacs-snapshot -f https://github.com/silex/nix-emacs-ci/archive/master.tar.gz
-RUN nix-env -iA nixpkgs.texlive.combined.scheme-basic
-RUN nix copy --no-require-sigs --to /nix-emacs $(type -p emacs)
-RUN cd /nix-emacs/nix/store && ln -s *emacs* emacs
+# RUN nix-env -iA nixpkgs.texlive.combined.scheme-basic
 
 FROM debian
 
@@ -15,6 +9,7 @@ RUN apt-get update && \
             curl \
             gnupg \
             openssh-client \
+            texlive-latex-base \
     && rm -rf /var/lib/apt/lists/*
 
 COPY --from=0 /nix-emacs/nix/store /nix/store
