Make sure emacs bin is on the path

--- a/kephale.001/debian/Dockerfile
+++ b/kephale.001/debian/Dockerfile
@@ -14,6 +14,6 @@ RUN apt-get update && \
     && rm -rf /var/lib/apt/lists/*
 
 # COPY --from=0 /nix-emacs/nix/store /nix/store
-# ENV PATH="/nix/store/emacs/bin:$PATH"
+ENV PATH="/nix/store/emacs/bin:$PATH"
 
 CMD ["emacs"]
