--- a/kephale.001/debian/Dockerfile
+++ b/kephale.001/debian/Dockerfile
@@ -1,6 +1,11 @@
-FROM silex/emacs:27.2-dev
+FROM silex/nix
 
 # RUN nix-env -iA nixpkgs.texlive.combined.scheme-basic
+
+ADD https://api.github.com/repos/Silex/nix-emacs-ci/commits?per_page=1 /tmp/cache
+RUN nix-env -iA emacs-27-2 -f https://github.com/silex/nix-emacs-ci/archive/master.tar.gz
+RUN nix copy --no-require-sigs --to /nix-emacs $(type -p emacs)
+RUN cd /nix-emacs/nix/store && ln -s *emacs* emacs
 
 FROM debian
 
@@ -13,7 +18,7 @@ RUN apt-get update && \
             pandoc \
     && rm -rf /var/lib/apt/lists/*
 
-# COPY --from=0 /nix-emacs/nix/store /nix/store
+COPY --from=0 /nix-emacs/nix/store /nix/store
 ENV PATH="/nix/store/emacs/bin:$PATH"
 
 CMD ["emacs"]
