Switch to full, a style file is missing from base

--- a/kephale.001/debian/Dockerfile
+++ b/kephale.001/debian/Dockerfile
@@ -14,7 +14,8 @@ RUN apt-get update && \
             curl \
             gnupg \
             openssh-client \
-            texlive-latex-base \
+            texlive-full \            
+#            texlive-latex-base \
             pandoc \
     && rm -rf /var/lib/apt/lists/*
 
